<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/item1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/item2"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/item3"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tx4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/item4"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tx5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/item5"
                android:textSize="20dp" />


        </LinearLayout>
    </HorizontalScrollView>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/text1" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"
            android:text="@string/text2" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/text3" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txShowItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="20dp"
        android:background="@color/colorGray"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:text="@string/text" />

    <LinearLayout
        android:id="@+id/linColor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/bt_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/red"/>

        <Button
            android:id="@+id/bt_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:text="@string/blue"/>

        <Button
            android:id="@+id/bt_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/green"/>


    </LinearLayout>

</LinearLayout>